converted html to ejs and link all routes in ejs

--- a/views/Unwanted HTML/index.html
+++ b/views/Unwanted HTML/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/style.css"
   </head>
   <body>
     <!-- header -->
@@ -28,32 +28,7 @@
     </header>
     <!-- /header -->
 
-    <!-- Main section-->
-    <main id="site-main">
-      <div class="container">
-        <div class="box-nav d-flex justify-between">
-          <div class="filter">
-            <a href="/">All Users</a>
-          </div>
-        </div>
-        <div class="form-title text-center">
-          <h2 class="text-dark">New User</h2>
-          <span class="text-light"
-            >Please fill the below form to create a new user account</span
-          >
-        </div>
-        <!-- form handle -->
-        <form method="POST" id="update_user">
-
-          <div class="new_user">
-            
-          </div>
-        </form>
-
-        <!-- /form handle -->
-      </div>
-    </main>
-
+ 
     <!-- /Main section-->
   </body>
 </html>
