add routes and services to the project

--- a/views/Unwanted HTML/index.html
+++ b/views/Unwanted HTML/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="../assets/css/style.css"
+    <link rel="stylesheet" href="../assets/css/style.css" />
   </head>
   <body>
     <!-- header -->
@@ -28,7 +28,6 @@
     </header>
     <!-- /header -->
 
- 
     <!-- /Main section-->
   </body>
 </html>
