--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -1,4 +1,6 @@
-<form method="POST" id="add_user">
+
+
+<form action="/api/users" method="POST"  id="add_user">
     <div class="new_user">
       <div class="form-group">
         <label for="name" class="text-light">Name</label>
